# GhostVenture-Projects

timmy-trader/: .env.example  .firebaserc  .gitignore  README.md  Timmy.desktop  firebase.json  pyproject.toml  watchlist.txt
timmy-trader/docs/: DAILY_UPDATE_2026-07-23.md  HOTFIX_IMPLEMENTATION_LOG.md  IMPLEMENTATION_OUTLINE.md  OPERATOR_CHECKLIST.md  TIMMY_MASTER_DOCUMENTATION.md  UPGRADE_MANIFEST.md  WEBULL_SETUP.md  WORKFLOWS.md
timmy-trader/examples/: sample_bars.csv
timmy-trader/knowledge/: asset-classes.md  live-automation.md  market-hours.md  order-handling.md  paper-to-live.md  red-green-flags.md  risk-controls.md  scouting.md
timmy-trader/packaging/: timmy-trader  timmy-trader.desktop
timmy-trader/scripts/: build_elf.sh  install_user_service.sh  launch_timmy.sh  package_deb.sh  smoke_test.py  timmy_watchdog.py
timmy-trader/site/: 404.html  README.md  boilerplates.html  contact.html  download.html  faq.html  index.html  legal.html  manifest.webmanifest  sitemap.xml  support.html
timmy-trader/tests/: __init__.py  test_broker_reconciliation.py  test_data_pipeline.py  test_desktop_single_instance.py  test_diagnostics.py  test_market_calendar.py  test_market_guards.py  test_packaging_contracts.py  test_positions.py  test_runtime_reliability.py  test_safety_hardening.py  test_strategy.py
timmy-trader/trend_trader/: __init__.py  asset_classes.py  backtest.py  broker_reconciliation.py  cli.py  config.py  dashboard.py  data.py  desktop.py  diagnostics.py  indicators.py  knowledge.py  market_calendar.py  market_data.py  market_guards.py  market_universe.py  (+12 more)
(+145 files in other folders)
